--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^9.4.4",
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^1.0.1",
+    "compression-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
     "css-mqpacker": "^7.0.0",
