--- a/package.json
+++ b/package.json
@@ -11,10 +11,6 @@
     "> 1%",
     "last 3 version"
   ],
-  "engines": {
-    "npm": ">=8.5.0",
-    "node": ">=16.14.2"
-  },
   "devDependencies": {
     "@babel/core": "7.2.0",
     "@babel/preset-env": "7.2.0",
@@ -32,10 +28,10 @@
     "jquery": "3.5.0",
     "load-google-maps-api": "1.3.2",
     "mini-css-extract-plugin": "0.5.0",
+    "node-sass": "4.11.0",
     "path": "0.12.7",
     "postcss-loader": "3.0.0",
     "purgecss-webpack-plugin": "1.4.0",
-    "sass": "1.50.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "webpack": "4.27.1",
